--- a/public/css/main.css
+++ b/public/css/main.css
@@ -420,7 +420,7 @@ width: 11px;
   width: 45%;*/
   background-color: #0f748f;
   color: #fff;
-  height: 335px;
+  /*height: 335px;*/
   padding: 2em 1em 1em 2em;
   position: absolute;
   right: 0;
