--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,7 @@ width: 11px;
     line-height: 25px;
     font-weight: 300;
     font-size: 13px;
+    margin: 1em 0em;
 }
 
 .btn {
@@ -257,9 +258,12 @@ width: 11px;
   /*background-color: rgba(15,116,143,0.8);*/
   padding: 60px 50px 80px 20%;
   position: absolute;
-  top: 25%;
+  /*top: 25%;
   width: 76%;
-  opacity: 0.8;
+  opacity: 0.8;*/
+  top: 74%;
+  width: 81%;
+  opacity: 1;
 }
 
 #home-carousel .carousel-inner h2 {
@@ -274,7 +278,7 @@ width: 11px;
 #home-carousel .carousel-inner p {
   color: #FFFFFF;
   line-height: 28px;
-  font-size: 13px;
+  /*font-size: 13px;*/
   margin-top: 0;
   text-shadow:none;
 }
