--- a/resources/contact.phtml
+++ b/resources/contact.phtml
@@ -1,6 +1,6 @@
 <div>
 	<div style='text-align: center;' >
-		<img style='width: 100%;' src='http://emaus2017.esy.es/img/panel.png' />
+		<img style='width: 100%;' src='<?=$img?>/img/panel.png' />
 	</div>
 	<div>
 		<label style='<?=$style?>' >Estimados,<br/>
